@startuml

package SignTalk_DB {
   
    class Lsf {
        type: string
        url: string
    }

    class Alphabet {
        name: string
        lsf: Lsf
        getAlphabet(): List<Alphabet>
        getAlphabetById(id: string): Alphabet
        getAlphabetByWord(word: string): List<Alphabet>    
    }

    class Dictionary {
        gloss: string
        videoId: string
        category: string
        start: string
        end: string
        getDictionary(): List<Dictionary>
        getDictionaryById(id: string): Dictionary
        getRandomWord(): string
        getQuizzLsf(): quizzLSF
        getQuizzFr(): quizzFR
    }


    class User {
            id: int
            nom: string 
            prenom: string 
            email: string
            password: string
            isAdmin: boolean 
            authUser(email: String,password: String)
            registerUser(nom: String,prenom: String, email: String, password: String)
            getUserProfile(id: String)
            updateUserProfile(id: String)
    }

    class Details {
        word: String
        multimedias: Array<String>
        correctMultimedia: String 
        multimedia: String 
        words: Array<String> 
        correctWord: String 
    }

    class Game {
        type: string
        details: Details 
        isCorrect: boolean
    }

    class History {
        game: Game 
        userId: id 
        archiveGame(type: String, details: Details, isCorrect: boolean)
        getHistory(id: id)
        deleteHistory(id: id)
    }

    Alphabet <-- Lsf  
    Details <-- Game 
    Game <-- History
}

@enduml